# tools

./: .gitattributes  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
assets/: app.manifest
completions/: _hime-tools  _hime-tools.ps1  hime-tools.bash  hime-tools.elv  hime-tools.fish
src/: archive.rs  cli.rs  hcb.rs  lib.rs  main.rs  nvsg.rs
src/utils/: bitmap.rs  fs.rs  hzc1.rs  io.rs  mod.rs  num.rs  opcode.rs  png.rs  strings.rs  text.rs
tests/: archive.rs  hcb.rs  nvsg.rs  strings.rs
tests/fixtures/: CHR_メア_悲_死神カマ_表情.nvsg  gaiji_heart156.nvsg  hime.hcb  x禁止.nvsg
tests/fixtures/hime/: config.yaml  hime.asm
