[package]
name = "hime-tools"
version = "2.11.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
argh = { version = "=0.1.19", default-features = false, features = ["help"] }
anyhow = "=1.0.102"
flate2 = "=1.1.9"
png = "=0.18.1"
encoding_rs = "=0.8.35"
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = "=0.9.33"
rayon = "=1.11.0"
colored = "=3.1.1"

[dev-dependencies]
tempfile = "=3.26.0"

[build-dependencies]

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "=0.1.12"
